2000-25-07  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smidump.c: Removed again `-X' option to eliminate parser
	options that might lead to different results.

2000-21-07  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/error.c: Added a fourth arg to the error handler representing
	the error name. This has been wished and contributed by Bill Fenner.
	Note that this changed the API slightly.

2000-20-07  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/check.c: Fixed index length checks for OCTET STRINGs,
	IpAddresses and OBJECT-IDENTIFIERs. Thanks to Bill Fenner.

	* lib/error.c: Fixed two minor typos. Thanks to Bill.

2000-19-07  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-python.c: a new dump format to generate Python MIB
	dictionary code. Contributed by Pat Knight.

	* tools/dump-xml.c: Fixed missing end tag of rows and tables
	in certain cases. Contributed by Pat Knight.

	* tools/smidump.c: Added option `-X' for `lax' parsing. Some
	people wish to accept things like underscores or upper case
	first letters in object type names. Note that it is usually
	a *bad* idea to use lax parsing!

2000-18-07  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/FRNETSERV-MIB: updated (RFC 2954).

	* mibs/ietf/FR-ATM-PVC-SERVICE-IWF-MIB: added (RFC 2955).

2000-17-07  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-ucdsnmp.c: Juergen fixed BITS handling.

2000-12-07  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/RTP-MIB: added (RFC 2959).

	* mibs/ietf/COPS-CLIENT-MIB: added (RFC 2940).

2000-10-07  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/IPMROUTE-STD-MIB: added (RFC 2932).

	* mibs/ietf/IGMP-STD-MIB: added (RFC 2933).

	* mibs/ietf/PIM-MIB: added (RFC 2934).

2000-10-05  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/DISMAN-NSLOOKUP-MIB,DISMAN-PING-MIB,DISMAN-TRACEROUTE-MIB:
	added (RFC 2925).

2000-10-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/scanner-smi.l: Fixed lex'ing of comments. Thanks to