@@ -135,14 +135,15 @@
 #define ERR_INDEX_NO_RANGE_MOD                   134
 #define ERR_INDEX_NO_SIZE                        135
 #define ERR_INDEX_NO_SIZE_MOD                    136
-#define ERR_INDEX_NEGATIVE                       137
-#define ERR_EMPTY_DESCRIPTION                    138
-#define ERR_INDEX_NOT_COLUMN                     139
-#define ERR_AUGMENT_NESTED                       140
-#define ERR_AUGMENT_NO_ROW                       141
-#define ERR_NODE_NOT_IN_GROUP                    142
-#define ERR_NOTIFICATION_NOT_IN_GROUP            143
-#define ERR_INVALID_GROUP_MEMBER                 144
-#define ERR_MIXED_GROUP_MEMBERS                  145
-#define ERR_BAD_LOWER_IDENTIFIER_CASE            146
-#define ERR_UNDERSCORE_IN_IDENTIFIER             147
+#define ERR_INDEX_RANGE_NEGATIVE                 137
+#define ERR_INDEX_ENUM_NEGATIVE                  138
+#define ERR_EMPTY_DESCRIPTION                    139
+#define ERR_INDEX_NOT_COLUMN                     140
+#define ERR_AUGMENT_NESTED                       141
+#define ERR_AUGMENT_NO_ROW                       142
+#define ERR_NODE_NOT_IN_GROUP                    143
+#define ERR_NOTIFICATION_NOT_IN_GROUP            144
+#define ERR_INVALID_GROUP_MEMBER                 145
+#define ERR_MIXED_GROUP_MEMBERS                  146
+#define ERR_BAD_LOWER_IDENTIFIER_CASE            147
+#define ERR_UNDERSCORE_IN_IDENTIFIER             148
